<resources>
    <string name="app_name">Board Game Collector</string>
    <string name="id"></string>
    <string name="title"></string>
    <string name="original"></string>
    <string name="rank"></string>
    <string name="description"></string>
    <string name="expansions"></string>
    <string name="year"></string>
    <string name="designers"></string>
    <string name="artists"></string>
    <string name="location"></string>
    <string name="bgg"></string>
    <string name="orderDate"></string>
    <string name="addDate"></string>
    <string name="price"></string>
    <string name="scd"></string>
    <string name="ean"></string>
    <string name="code"></string>
    <string name="type"></string>
    <string name="comment"></string>
    <string name="sort">Sortuj według: </string>
    <string name="show">Pokaż dodatki</string>
    <string name="show2">Pokaż gry dodane ręcznie</string>
    <string name="loc">Dostępne lokalizacje: </string>
    <string name="details"></string>
    <string name="hint">Podaj nazwę gry planszowej</string>
    <string name="hint2">Podaj nazwę nowej lokalizacji</string>
    <string name="hint3">Podaj nazwę użytkownika BGG</string>
    <string name="button"></string>
    <string name="save">Zapisz</string>
    <string name="submit">Zatwierdź</string>
    <string name="search">Wyszukaj</string>
    <string name="add">Dodaj</string>
    <string name="impor">Importuj kolekcję gracza</string>
    <string name="update">Aktualizuj ranking</string>
    <string name="test" />
</resources>