<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!--    <include-->
<!--        layout="@layout/toolbar"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sortView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/sort"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/selectSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/showExpansionsCheckbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/show"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/tableLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/searchButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="16dp"
                android:clickable="true"
                android:contentDescription="@string/button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@android:drawable/ic_menu_search" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/locationButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="end"
                android:layout_margin="16dp"
                android:clickable="true"
                android:contentDescription="@string/button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/searchButton"
                app:srcCompat="@android:drawable/ic_menu_mylocation" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/deleteButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="end"
                android:layout_margin="16dp"
                android:clickable="true"
                android:contentDescription="@string/button"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addButton"
                app:srcCompat="@android:drawable/ic_menu_delete" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="16dp"
                android:clickable="true"
                android:contentDescription="@string/button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@android:drawable/ic_input_add" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                app:layout_constraintStart_toEndOf="@+id/locationButton"
                android:visibility="invisible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</LinearLayout>